--- a/Dmoe/AYSegmentedControlsDemo/Base.lproj/Main.storyboard
+++ b/Dmoe/AYSegmentedControlsDemo/Base.lproj/Main.storyboard
@@ -18,21 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJp-tg-GHw" customClass="AYSegmentedControls" customModule="AYSegmentedControlsDemo" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJp-tg-GHw" customClass="AYSegmentedControls" customModule="AYSegmentedControls">
                                 <rect key="frame" x="30" y="64" width="354" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="rLq-0L-o1w"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eLw-7E-L2W" customClass="AYSegmentedControls" customModule="AYSegmentedControlsDemo" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eLw-7E-L2W" customClass="AYSegmentedControls" customModule="AYSegmentedControls">
                                 <rect key="frame" x="30" y="144" width="354" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="OlL-ap-fUo"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Adb-vn-hn8" customClass="AYSegmentedControls" customModule="AYSegmentedControlsDemo" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Adb-vn-hn8" customClass="AYSegmentedControls" customModule="AYSegmentedControls">
                                 <rect key="frame" x="30" y="224" width="354" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
